@@ -27,6 +27,10 @@ plugins {
 apply plugin: 'checkstyle'
 apply plugin: 'net.serenity-bdd.aggregator'
 
+jacoco {
+    toolVersion = "0.8.7"
+}
+
 group = 'uk.gov.hmcts.reform.divorce'
 version = '3.0.0'
 sourceCompatibility = 11
@@ -55,6 +59,8 @@ dependencyManagement {
         dependency group: 'org.yaml', name: 'snakeyaml', version: '1.28'
 
         dependency group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.68'
+
+        dependency group: 'org.glassfish', name: 'jakarta.el', version: '3.0.4'
     }
 }
 
@@ -98,12 +104,11 @@ compileTestJava {
 }
 
 repositories {
-    mavenLocal()
+    mavenCentral()
     jcenter()
-
-    maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
-    maven { url "http://repo.maven.apache.org/maven2" }
     maven { url 'https://repo.spring.io/libs-milestone' }
+    maven { url "https://repo.maven.apache.org/maven2" }
+    maven { url "https://jitpack.io" }
 }
 
 distributions {
@@ -189,7 +194,7 @@ def versions = [
         tomcat:                                         '9.0.50',
         wiremockVersion:                                '2.27.2',
         unirest:                                        '1.4.9',
-        pact_version:                                   '4.1.8',
+        pact_version:                                   '4.1.11',
         jetty:                                          '9.4.35.v20201120',
         httpComponents:                                 '4.5.13',
 ]
@@ -293,6 +298,7 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot) {
         exclude(module: 'commons-logging')
     }
+    testCompile('com.github.hmcts:fortify-client:1.2.0:all')
 
     contractTestCompile("org.junit.jupiter:junit-jupiter-api:5.7.2")
     contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.7.2")
@@ -410,5 +416,11 @@ run {
     if (debug == 'true') {
         jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5010']
     }
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
